# typedorm

./: .bazelrc  .eslintignore  .eslintrc.json  .gitignore  .npmignore  .prettierignore  .releaserc.yml  BUILD.bazel  CHANGELOG.md  LICENSE  README.md  SECURITY.md  WORKSPACE  babel-config.js  babel.config.js  commitlint.config.js  docker-compose.yml  index.ts  jest-tsconfig-path-mapper.js  jest.config.js  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
.docker/: dynamodb-local.Dockerfile  dynamodb-sample-table.json  init-db.Dockerfile
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml  release.yml
__test__/__mocks__/: test-table.ts
__test__/github-issues/152/: issue-152.spec.ts  test-entity.ts
__test__/github-issues/157/: issue-157.spec.ts
__test__/github-issues/158/: issue-158.spec.ts  test-entity.ts  test-table.ts
__test__/github-issues/176/: issue-176.spec.ts  user-entity.ts
docs/: CHANGELOG.md  api.md  debugging.md  entity-inheritance.md  guide.md  how-it-works.md  how-to-recipes.md  how-to.md  index.md  multiple-connection.md  upgrading-to-use-the-aws-sdk-v3.md
examples/demo-aws-sdk-v2/: BUILD  README.md  index.ts  package.json
examples/demo-aws-sdk-v3/: BUILD  README.md  index.ts
examples/demo-document-client-v2/: BUILD  index.ts
examples/demo-document-client-v3/: BUILD  index.ts  rollup.config.js
examples/shared-base/: BUILD  index.ts  package.json  rollup.config.js  table.ts
tools/: bazel-stamp-vars.js  defaults.bzl  pkg.bzl  publish.sh  stamp-current-tag.js  util.js
(+24 files in other folders)
