load("@npm//@bazel/typescript:index.bzl", "ts_config")

ts_config(
    name = "tsconfig_cjs",
    src = "tsconfig.cjs.json",
    deps = ["tsconfig.json"],
    visibility = [
        "//:__subpackages__",
    ],    
)

ts_config(
    name = "tsconfig_esm",
    src = "tsconfig.esm.json",
    deps = ["tsconfig.json"],
    visibility = [
        "//:__subpackages__",
    ],    
)

exports_files(
    [
        "tsconfig.json",
        "LICENSE",
        ".npmignore",
    ],
    visibility = [
        "//packages:__subpackages__"
    ],
)
